# webtech-forge

./: .gitignore
src/backend/: .env.example  CHANGELOG.md  README.md  manage.py  pyproject.toml
src/backend/adapters/: docker_adapter.py  git_adapter.py  metrics_adapter.py  registry_adapter.py  storage_adapter.py  traefik_adapter.py
src/backend/apps/accounts/: admin.py  models.py  urls.py
src/backend/apps/activator/: admin.py  apps.py  models.py  tasks.py
src/backend/apps/audit/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/catalog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/deployments/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/backend/apps/environments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/integrations/: urls.py  views.py
src/backend/apps/monitor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/organizations/: admin.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/projects/: admin.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/services/: admin.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/workspaces/: admin.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/backend/config/: asgi.py  celery.py  urls.py
src/backend/config/settings/: base.py  development.py  production.py
src/backend/tests/: conftest.py  factories.py
src/backend/tests/test_api/: conftest.py  test_audit.py  test_deployments.py  test_integrations.py  test_monitor.py  test_projects.py  test_services.py  test_workspaces.py
src/backend/tests/test_middleware/: test_workspace_middleware.py
src/backend/tests/test_models/: test_deployments.py  test_hierarchy.py  (+1 more)
(+61 files in other folders)
