[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webtech-forge-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Django core
    "django==5.2.*",
    "djangorestframework==3.15.*",
    "djangorestframework-simplejwt==5.3.*",
    "django-filter==24.*",
    "django-environ==0.11.*",
    "django-cors-headers==4.*",

    # Async / WebSocket
    "channels==4.*",
    "channels-redis==4.*",
    "daphne==4.*",

    # Celery
    "celery[redis]==5.4.*",
    "django-celery-beat>=2.8",        # 2.7.x cap Django<5.2 ; 2.8+ supporte Django 5.x
    "django-celery-results>=2.5.1",   # 2.5.0 cap Django<5.2

    # Database
    "psycopg[binary]>=3.2,<4",

    # Security & MFA
    "django-otp>=1.5",
    "qrcode[pil]>=7,<8",

    # Encryption (WorkspaceSecret)
    "django-encrypted-model-fields>=0.6",

    # Typing & validation
    "django-stubs[compatible-mypy]>=5",
    "mypy>=1.10,<2",
    "pydantic==2.*",

    # Observability
    "django-prometheus==2.3.*",
    "structlog==24.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-django==4.8.*",
    "pytest-cov==5.*",
    "factory-boy==3.3.*",
    "faker==25.*",
    "ipython",
    "django-extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*", "adapters*"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=apps --cov-report=term-missing"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]
